# FYP-Mihiruth

./: .asoundrc.example  .gitignore  CAMERA_INTEGRATION_SUMMARY.md  EMOTION_QUICKSTART.md  OPTIMIZATIONS.md  QUICK_START_CAMERA.md  QUICK_WINS.md  README.md  SPEED_IMPROVEMENTS.md  main.py  pyproject.toml  start_robot.sh
data/: faqs.embeddings.npy  faqs.json
data/chroma_db/: chroma.sqlite3
docs/: ARCHITECTURE.md  CAMERA_INTEGRATION.md  EMOTION_COMMANDS.md  EMOTION_PUBLISHING_TEST.md  EMOTION_SYSTEM.md  FAQ_GUIDE.md  OLD_README.md  RAG_COMPLETE.md  RAG_GUIDE.md  RAG_INTEGRATION_SUMMARY.md  REORGANIZATION_SUMMARY.md  USER_HISTORY.md
scripts/: debug_rag.py  init_database.py  list_voices.py  show_emotion_commands.py  show_emotion_guide.py  test_emotion_publishing.py  test_emotions.py  test_exact_queries.py  test_faq.py  test_main_faq.py  test_microphone.py  test_performance.py  test_pipeline_init.py  test_rag.py  test_stream_faq.py  test_user_detection.py  test_user_history.py
src/: __init__.py
src/knowledge_base/documents/: Academic_Bachelors.txt  Academic_Graduate_Programs.txt  Academic_Staff.txt  Department_Locations.txt  ENTC_Introduction.txt  Electronic Club.txt  Research_Facilities_and_Laboratories.txt  Research_Industry_Sponsored_Labs.txt  University_of_Moratuwa.txt
src/robot_pipeline/: __init__.py  emotion_classifier.py  mouth_controller.py  pipeline.py  ros2_bridge.py  ros2_main.py
src/robot_pipeline/ai/: __init__.py  agent.py  faq_database.py  prompts.py  rag_database.py  web_search.py
src/robot_pipeline/audio/: capture.py  (+1 more)
tests/: __init__.py
(+3 files in other folders)
